# sysopy-lab

lab1/: CMakeLists.txt  library.c  main.c  makefile
lab1/zad2/: commands.txt  generator.py  main.c  makefile  raport2.txt  test
lab1/zad3/: main.c  makefile  test
lab1/zad3a/: dynamic_main.c  library.h  main.c  makefile  results3a.txt
lab1/zad3b/: dynamic_main.c  komentarz.txt  library.c  makefile  results3b.txt
lab10/tcp/: CMakeLists.txt  TODO.txt  client.c  error_msg.h  main.c  message.c  message.h  server.c
lab10/udp/: CMakeLists.txt  client.c  common.c  common.h  server.c
lab2/: CMakeLists.txt  Makefile  lib.c  lib.h  main  main.c  test.sh
lab2/directory/: 578e7257  aba.txt  random_file.sh  symlink57
lab2/zad1/: main  main.c  results.txt  test.sh
lab2/zad2/: Makefile  lib.c  main
lab3/zad1/: Makefile  main.c
lab3/zad2/: Makefile  a.txt  b.txt  check_matrixes.py  generate_matrix.c  main.c  multiplication.c  multiplication.h
lab3/zad3/: a.txt  b.txt  d.txt  generate_matrix  generate_matrix.c  lista.txt  main  main.c  multiplication.c  multiplication.h
lab4/: .gitignore
lab4/zad1/: main.c
lab4/zad2/: child.c  main.c  old_main.c  raport2.txt
lab4/zad3/: main.c
lab4/zad4/: catcher  catcher.c  sender  sender_enhanced.c
lab4/zad4a/: catcher.c  sender.c
lab4/zad4b/: catcher_enhanced.c
lab5/: .gitignore
lab5/zad1/: example.txt  (+2 more)
lab7/: clearn_ipc.sh
lab7/posix/: CMakeLists.txt  delivery_shop.c  delivery_shop.h  shop.c  utils.c  utils.h  worker.c
lab8/: CMakeLists.txt  Times.txt  benchmark.sh  main.c
lab9/: CMakeLists.txt  main.c
(+71 files in other folders)
